# adib_sentiment_analysis

./: Dockerfile  docker-compose.yaml  install_dep.py  pyproject.toml  sentiment-analysis-text.py  testing_model.py
pages/: 1_sentiment-analysis-audio.py  2_sentiment-analysis-csv.py
