[tool.poetry]
name = "adib-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Dharshan <dharshans@crayondata.com>"]
readme = "README.md"
packages = [{include = "adib_sentiment_analysis"}]

[tool.poetry.dependencies]
python = "3.9.0"
streamlit = "1.27.2"
streamlit-extras = "^0.4.0"
streamlit-audiorec = "^0.1.3"
assemblyai = "^0.22.0"
wordcloud = "^1.9.3"
pandas = "^2.2.1"
nltk = "^3.8.1"
autocorrect = "^2.6.1"
spacy = "^3.7.4"
pyabsa = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
